src/objects/Apttus_Config2__TempFilter__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__FieldLabel__c</fullName>
        <description>The label of the Product2 field used in the filter.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldName__c</fullName>
        <description>Name for the Product2 field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldValue__c</fullName>
        <description>The value of the product field to be used for filtering the search result</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>